Validate emptiness of marker selection

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
 }
+
 .row {
     display:flex;
 }
@@ -66,4 +67,8 @@ html, body {
     width:10rem;
     height:10rem;
     border: 1px solid black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 4rem;
 }
