--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,22 @@ html, body {
     justify-content: center;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+}
+
 #gameboard {
     display:flex;
     flex-direction: column;
     justify-content: center;
 }
 
+#results {
+	text-align: center;
+	font-size: 2rem;
+	padding-top: 2rem;
+}
 .row {
     display:flex;
 }
